2007-06-29  Martin Leidig  <mleidig@schlund.de>

	Removed generation of IWrapper method toString() and added generic
	toString()-implementation to class IWrapperImpl (simplification of
	generated code)

	* src/de/schlund/pfixcore/generator/IWrapperImpl.java
	* projects/core/build/iwrapper.xsl

2007-06-29  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/workflow/Context.java: 
	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/SessionStatusEvent.java: 
	* src/de/schlund/pfixcore/workflow/SessionStatusListener.java: 
	Implemented session listeners: Applications can register a listener with a
	context instance that is notfied, when the session is invalidated.	

2007-06-27  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/config/impl/DirectOutputServletConfigImpl.java: fixed property
	customization problem, added support for customizable global and pagerequest 
	properties (incomplete CustomizationHandler initialization)

2007-06-21  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: include __frame 
	parameter to reuse redirect URL (if existing)

2007-06-21  Martin Leidig  <mleidig@schlund.de>

	* projects/core/xsl/forminput.xsl: bugfix: calling image geometry extension
	function with percentage values causes NumberFormatException, quickfix just
	copies width/height percentage values without calling the extension function
	for pfx:xinp@type='image' elements

2007-06-21  Martin Leidig  <mleidig@schlund.de>

	Fixed changed trail logging behaviour: instead of reuse flag the new
	trailLogged flag in SPDocument is used to decide if a trail has to be logged.
	It's also used to for the logging of the result tree.

	* src/de/schlund/pfixxml/SPDocument.java
	* src/de/schlund/pfixxml/AbstractXMLServer.java

2007-06-19  jtl  <jtl@schlund.de>
